--- a/src/styles/AboutCard.css
+++ b/src/styles/AboutCard.css
@@ -8,6 +8,18 @@
   text-align: center;
 }
 
+.usImage {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.text {
+  margin-top: 10px;
+}
+
 .card {
   background-color: #FFB7C5;
 }
@@ -16,11 +28,6 @@
   padding-top: 10px;
   padding-bottom: 10px;
   font-weight: none;
-}
-
-.name {
-  font-family: 'Sacramento', cursive;
-  font-size: 35px;
 }
 
 ul {
