--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -1,6 +1,6 @@
 .logo {
-    width: 900px;
-    height: 300px;
+    width: 100%;
+    height: auto;
     display: block;
     margin-right: auto;
     margin-left: auto;
